istio/fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  # nosso virtual service vai usar esse service do kubernetes
  - nginx-service
  http:
    - fault:
        # delay:
        #   percentage: 
        #     value: 0
        #   fixedDelay: 10s
        abort:
          percentage:
            value: 100
          httpStatus: 504
      route:
      - destination:
          host: nginx-service
          subset: all
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
    - name: all
      labels:
        app: nginx
