istio/gateway-domains.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*.fullcycle" # "site.com.br"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  # nosso virtual service vai usar esse service do kubernetes
  - "a.fullcycle" # needs to match the gateway host
  gateways:
  - ingress-gateway-k3s # needs to match the gateway name
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-b
spec:
  hosts:
  # nosso virtual service vai usar esse service do kubernetes
  - "b.fullcycle" # needs to match the gateway host
  gateways:
  - ingress-gateway-k3s # needs to match the gateway name
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2
