istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*" # "site.com.br"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  # nosso virtual service vai usar esse service do kubernetes
  - "*" # needs to match the gateway host
  gateways:
  - ingress-gateway-k3s # needs to match the gateway name
  http:
    - match:
      - uri:
          prefix: "/b" # vai cair no v2 e dar um error 404 do nginx
      route:
      - destination:
          host: nginx-service
          subset: v2
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: nginx-service
          subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  # remember the subset from the vs? Here we specify (using labels) to which deployment
  # the traffic goes
  subsets:
    - name: v1
      labels:
        version: a
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: b
